[package]
name = "k-lock"
version = "0.1.2"
edition = "2021"
description = "A mutex for short, safe critical sections"
license = "MIT"
authors = ["kvc0"]
readme = "README.md"
repository = "https://github.com/kvc0/k-lock"
keywords = ["performance", "locking", "mutex"]
categories = ["concurrency", "asynchronous"]

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[dependencies]
atomic-wait                 = { version = "1" }

[dev-dependencies]
criterion                   = { version = "0.5" }
parking_lot                 = { version = "0.12" }

[build-dependencies]
readme-rustdocifier = "0.1"
